[package]
name = "yakui-miniquad"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-miniquad"
description = "A library integrating yakui with miniquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
miniquad = { version = "0.3.16", default-features = false }
yakui = "0.2.0"
