[package]
name = "yakui-miniquad"
version = "0.2.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-miniquad"
description = "A library integrating yakui with miniquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
miniquad = { version = "0.3.16", default-features = false }
yakui-core = "0.2.0"

[dev-dependencies]
yakui = "0.2.0"
