[package]
name = "yakui-miniquad"
version = "0.2.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-miniquad"
description = "A library integrating yakui with miniquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
miniquad = { version = "0.4.0", default-features = false }
yakui-core = "0.2.0"

[dev-dependencies]
yakui = "0.2.0"
image = "0.25.1"