[package]
name = "yakui-miniquad-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui-miniquad = { path = "../"}
miniquad = "0.3.13"
yakui = "0.2.0"

[[bin]]
name = "yakui-miniquad-example"
path = "main.rs"